--- a/flask/pyproject.toml
+++ b/flask/pyproject.toml
@@ -17,6 +17,8 @@ rococo = "^1.0.33"
 pyjwt = "^2.10.1"
 pika = "^1.3.2"
 requests = "^2.31.0"
+pytest = "^7.4.0"
+pytest-flask = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
